--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>How Long Till...</title>
-</head>
-<body>
+  </head>
+  <body>
+    <input type="text" id="input"/>
+    <p id="time"></p>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
