--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>How Long Till...</title></head><body> </body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>How Long Till...</title></head><body> <input type="text" id="input"> <p id="time"></p> <script src="/howlongtill/src.6ab5d43e.js"></script> </body></html>
