Add simple designs

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link rel="stylesheet" href="./styles/index.css">
     <title>How Long Till...</title>
   </head>
   <body>
-    <input type="text" id="input"/>
-    <p id="time"></p>
+    <div class="content">
+      <p>How long till</p>
+      <input type="text" id="input" class="input" />
+      <p id="time" class="result"></p>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
