Add title designs

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <div class="content">
-      <p>How long till</p>
+      <h1>How long till</h1>
       <input type="text" id="input" class="input" />
-      <p id="time" class="result"></p>
+      <h2 id="time" class="result"></h2>
     </div>
     <script src="./index.js"></script>
   </body>
